# luexks_shroud_editor

./: Cargo.toml  README.md
src/: angle_gizmo.rs  background_grid.rs  block_container.rs  color_type_conversion.rs  file_import.rs  file_import_export.rs  fonts.rs  icon_radius.rs  invert_y.rs  key_tracker.rs  keybind_deserialiser.rs  keybind_serialiser.rs  keybinds.rs  main.rs  mirror_pairs.rs  pos_and_display_oriented_number_conversion.rs  pos_in_polygon.rs  position_conversion.rs  reference_image.rs  render_polygon.rs  restructure_vertices.rs  right_tri_angle_edge_case.rs  rotation_edgecase.rs  selection_mirror_splitting.rs  selection_type.rs  shape_container.rs  shapes_import_text_default.rs  shroud_editor.rs  shroud_import_text_default.rs  shroud_interaction.rs  shroud_layer_container.rs  shroud_layer_interaction.rs  shroud_layer_rendering.rs  size_from_verts.rs  snap_to_grid.rs  styles.rs  undo_redo.rs  verts_to_convex_hull.rs
src/shroud_editor/: add_mirror.rs  bulk_set.rs  delete_shroud_layers.rs  delta_time.rs  draw_grid.rs  export_shroud.rs  grouping.rs  half_grid_size_key_logic.rs  hotkey_copy_and_paste.rs  hotkey_mirroring.rs  hotkey_shroud_layer_deletion.rs  import_shapes.rs  left_panel.rs  parse_shapes_text.rs  parse_shroud_text.rs  parsing.rs  position_conversion.rs  render_polygon.rs  render_shroud.rs  right_click_shroud_add.rs  selection_box.rs  shape_combo_box.rs  shroud_interaction_checks.rs  shroud_settings.rs  (+9 more)
tests/: albion_shapes  auto_offset_reference.py  hypoeutect_shapes  hypoeutect_shroud  mega_cannon_shape.txt  select_barrels_and_crash  square
