[package]
name = "luexks_shroud_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = "0.32.0"
egui_knob = "0.3.3"
env_logger = "0.11.8"
itertools = "0.14.0"
nom = "8.0.0"
luexks_reassembly = { git = "https://github.com/Luexks/luexks_reassembly_2.git" }
parse_vanilla_shapes = {  git = "https://github.com/Luexks/parse_vanilla_shapes.git" }
thiserror = "2.0.16"
bytemuck = "1.24.0"

[patch."https://github.com/Luexks/luexks_reassembly_2.git"]
luexks_reassembly = { path = "../luexks_reassembly" }
[patch."https://github.com/Luexks/parse_vanilla_shapes.git"]
parse_vanilla_shapes = { path = "../parse_vanilla_shapes" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
